--- a/package.json
+++ b/package.json
@@ -12,12 +12,21 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/module-alias": "^2.0.4",
     "@types/node": "^20.11.0",
+    "install": "^0.13.0",
+    "module-alias": "^2.2.3",
+    "sequelize-cli": "^6.6.2",
+    "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
   },
   "dependencies": {
     "axios": "^1.6.5",
+    "cross-env": "^7.0.3",
     "dotenv": "^16.3.1",
+    "nodemon": "^3.0.2",
+    "sequelize": "^6.35.2",
+    "sqlite3": "^5.1.7",
     "telegraf": "^4.15.3"
   }
 }
