--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "build": "npx tsc",
     "start": "cross-env NODE_ENV=prod node dist/index.js",
-    "dev": "cross-env NODE_ENV=dev nodemon src/index.ts"
+    "dev": "cross-env NODE_ENV=dev nodemon src/index.ts",
+    "db": "typeorm-ts-node-commonjs"
   },
   "keywords": [],
   "author": "",
@@ -18,13 +19,17 @@
     "module-alias": "^2.2.3",
     "sequelize-cli": "^6.6.2",
     "ts-node": "^10.9.2",
+    "tslib": "^2.6.2",
+    "typeorm": "^0.3.19",
     "typescript": "^5.3.3"
   },
   "dependencies": {
     "axios": "^1.6.5",
+    "better-sqlite3": "^9.2.2",
     "cross-env": "^7.0.3",
     "dotenv": "^16.3.1",
     "nodemon": "^3.0.2",
+    "reflect-metadata": "^0.2.1",
     "sequelize": "^6.35.2",
     "sqlite3": "^5.1.7",
     "telegraf": "^4.15.3"
