--- a/package.json
+++ b/package.json
@@ -24,10 +24,12 @@
     "typescript": "^5.3.3"
   },
   "dependencies": {
+    "@types/node-cron": "^3.0.11",
     "axios": "^1.6.5",
     "better-sqlite3": "^9.2.2",
     "cross-env": "^7.0.3",
     "dotenv": "^16.3.1",
+    "node-cron": "^3.0.3",
     "nodemon": "^3.0.2",
     "reflect-metadata": "^0.2.1",
     "sequelize": "^6.35.2",
