--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "axios": "^1.6.5",
     "better-sqlite3": "^9.2.2",
     "cross-env": "^7.0.3",
+    "date-fns": "^3.2.0",
     "dotenv": "^16.3.1",
     "node-cron": "^3.0.3",
     "nodemon": "^3.0.2",
