Removed logging in production

--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "build": "npx tsc",
-    "start": "cross-env NODE_ENV=prod node dist/index.js",
-    "dev": "cross-env NODE_ENV=dev nodemon src/index.ts",
+    "start": "cross-env NODE_ENV=production node dist/index.js",
+    "dev": "cross-env NODE_ENV=development nodemon src/index.ts",
     "typeorm": "typeorm-ts-node-commonjs"
   },
   "keywords": [],
