--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "node-cron": "^3.0.3",
     "nodemon": "^3.0.2",
     "reflect-metadata": "^0.2.1",
-    "telegraf": "^4.15.3"
+    "telegraf": "^4.15.3",
+    "template-file": "^6.0.1"
   }
 }
