--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@types/node-cron": "^3.0.11",
     "axios": "^1.6.5",
     "better-sqlite3": "^9.2.2",
+    "canvas": "^2.11.2",
     "cross-env": "^7.0.3",
     "date-fns": "^3.2.0",
     "dotenv": "^16.3.1",
