--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "node-cron": "^3.0.3",
     "node-html-to-image": "^4.0.0",
     "nodemon": "^3.0.2",
+    "puppeteer-core": "^21.9.0",
     "reflect-metadata": "^0.2.1",
     "telegraf": "^4.15.3",
     "template-file": "^6.0.1"
