--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,7 @@
     "rootDir": "./src",
     "outDir": "./dist",
     "strict": true,
-    "esModuleInterop": true,
+    "esModuleInterop": false,
     "forceConsistentCasingInFileNames": true,
     "baseUrl": "./src",
     "strictPropertyInitialization": false,
