--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "puppeteer-core": "^21.9.0",
     "reflect-metadata": "^0.2.1",
     "telegraf": "^4.15.3",
-    "template-file": "^6.0.1"
+    "template-file": "^6.0.1",
+    "winston": "^3.11.0"
   }
 }
