--- a/public/templates/trophy_change_week.template
+++ b/public/templates/trophy_change_week.template
@@ -1,3 +1,3 @@
 🏆 Изменения кубков за последние 7 дней:
 
-{{#records}}{{index}}. {{date}}: 🏆{{trophies}}{{/records}}
+{{#records}}{{index}}. {{date}}: 🏆{{trophies}} ({{diff}}){{/records}}
