--- a/public/templates/profile.template
+++ b/public/templates/profile.template
@@ -1,4 +1,5 @@
 {{name}} ({{tag}})
+{{title}}
 🎖Уровень: {{expLevel}} ({{expPoints}} очков опыта)
 👾Клуб: {{club.name}} ({{club.tag}})
 🔮 {{mystery_points}}
